# botw-flight-director

./: .gitignore  Cargo.toml  README.md  Taskfile.yml  setup.py
client/: Taskfile.yml  bun.lockb  index.html  package.json  tsconfig.json  vite.config.ts
client/libs/wasm/: Cargo.toml
client/libs/wasm/src/: lib.rs
client/src/: main.tsx
core/: Cargo.toml  Taskfile.yml  build.rs  cbindgen.toml
core/src/: lib.rs  log.rs  server.rs
data/: Cargo.toml
data/src/: lib.rs  quest_tracker.rs
obs/: CMakeLists.txt  buildspec.json
obs/.github/scripts/: Build-Windows.ps1
obs/data/locale/: en-US.ini
obs/src/: botwfd.h  plugin-main.cpp  setting-macros.h
plugin/: CMakeLists.txt  buildspec.json
plugin/src/: botwfd.h  plugin-main.cpp
