[package]
name = "botwfdcore"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
deku = "0.16.0"
opencv = { version = "0.91.2", features = ["clang-runtime"] }
tungstenite = "0.21.0"

[dependencies.botwfddata]
path = "../data"

[build-dependencies]
which = "6.0.1"
cbindgen = "0.26.0"

[lib]
name = "botwfdcore"
path = "src/lib.rs"
crate-type = ["cdylib"]
